--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -41,6 +41,7 @@
     </select>
   </p>
   {% endfor %}
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
   <input type="submit" value="Päivitä tietoja" />
 </form>
 <p>
